adding remaining drivers

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 # All urls are added here
 loginUrl=http://localhost:8085/login
-homeUrl=
+homeUrl=http://localhost:8085/
 createAccountUrl=http://localhost:8085/open-account
 adminUrl=
 dashboardUrl=
@@ -20,10 +20,14 @@ employeeName=Minal Chaudhari
 # TestData sheet link
 testDataSheetPath=\\testData\\testData.xlsx
 
-# Database configuration
+# Database configuration (MYSQL)
 dbUrlBankUsers=jdbc:mysql://localhost:3306/bank_users
 dbUrlBankAccount=jdbc:mysql://localhost:3306/bank_account
 dbUrlBankCards=jdbc:mysql://localhost:3306/bank_cards
 dbUrlBankLoans=jdbc:mysql://localhost:3306/bank_loans
 dbUserName=root
 dbPassword=root
+
+# Image path
+profilePicImagePath=\\testImages\\profilePicture.jpg
+idProofImagePath=\\testImages\\aadharCard.jpg
